Fix right padding on small screens on koromix.dev

--- a/web/koromix.dev/template/static/main.css
+++ b/web/koromix.dev/template/static/main.css
@@ -185,7 +185,7 @@ code {
         position: static;
     }
 
-    main { padding-right: 16px; }
+    main { padding-right: 16px !important; }
 }
 
 @media screen and (max-width: 960px) {
